ingress-nginx.yaml
apiVersion: apps/v1beta1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-deployments
spec:
  selector:
    matchLabels:
      app: nginx-deployments
  replicas: 1 
  template:
    metadata:
      labels:
        app: nginx-deployments
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployments
  labels:
    app: nginx
spec:
  ports:
  - port: 80
  selector:
    app: nginx-deployments
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01
    kubernetes.io/ingress.class: nginx
  name: nginx-deployments
spec:
  rules:
  - host: nginx.institutovitalicia.com.br
    http:
      paths:
      - backend:
          serviceName: nginx-deployments
          servicePort: 80
        path: /
  tls:
  - hosts:
    - nginx.institutovitalicia.com.br
    secretName: institutovitalicia-lets
